0.41 (in development):
	+ Ability to change the space after user nick in reply with some punctuation symbol
	+ Ability to view the home timeline directly on twitter.com

0.40:
	* Better links handling with middle mouse key or with Meta key pressed in OS X
	+ Support for image preview for services:
		- imgur.com
		- yfrog.com
		- img.ly
		- twitpic.com
		- instagr.am

0.39:
	* Fixed bug with back button on profile page after some action with confirmation (#78)

0.38:
	* Fixed bug when links and media are not recognized in retweets
	* Fixed bug with services icon strange border
	* Even better links recognition
	+ New option to create a link to the tweet on twitter.com from time mark

0.36:
	* Fixed bug with disappeared services icons
	* Fixed bug with international hashtags
	* Twitter Text upgrade
	* Fixed bug with two or more maps opened in the same timeline
	+ Automatic tweet editor width positioning (special for Chrome 14 with native scrollbars on OS X Lion)
	+ Tweet pictures inline preview

0.35:
	* Some style changes (thanks @GrawlCore)
	+ We are using Twitter Text (https://github.com/twitter/twitter-text-js) to recognize url, mentions and hashes
	* Bug with two or more shortened urls in tweet is fixed

0.34:
	+ Select/remove account for OS X with ⌘ key
	* Showing geoinfo and tweet time options are now turned on by default (can be turned off in options)
	* Suggest list font size in replies fixed

0.33:
	* Better service detector. Now flickr, instagram, foursquare and thumblr links are recognized and replaced with icons
	* Bug with disabling tweet geolocation info is fixed

0.32:
	* Bug with status update with shortened link appears shortened at the timeline top is fixed (#81)
	* Bug with tweet text backup on link attach is fixed (#80)
	* Bug with wrong date on old tweets is fixed
	+ Experimental support for the endless scrolling (BUT without autoload skipped tweets yet, #16)
	+ Status update with geoinfo is now supported (#11)